force-app/main/default/objects/Account_datatable_settings__mdt/Account_datatable_settings__mdt.object-meta.xml
<CustomObject>
    <description>Contains all information to dynamically build the work component per client (columns to show, column order, type, sortable or not etc)</description>
    <label>Account datatable settings</label>
    <pluralLabel>Account datatable settings</pluralLabel>
</CustomObject>