force-app/main/default/objects/Account_datatable_settings__mdt/fields/Account_id__c.field-meta.xml
<CustomField>
    <fullName>Account_id__c</fullName>
    <label>Account id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>