force-app/main/default/objects/Account_datatable_settings__mdt/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <label>Account name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>