force-app/main/default/objects/Account_datatable_settings__mdt/fields/Account_specification__c.field-meta.xml
<CustomField>
    <fullName>Account_specification__c</fullName>
    <description>Field created to further specify a type of table, not in use yet</description>
    <label>Account specification</label>
    <length>80</length>
    <type>Text</type>
</CustomField>