force-app/main/default/objects/Account_datatable_settings__mdt/fields/Api_field_name__c.field-meta.xml
<CustomField>
    <fullName>Api_field_name__c</fullName>
    <description>Contains full API name of field (aka. Application__c.Contact__r.Name)</description>
    <inlineHelpText>Supply full API name of field for which you want the values to show in this columns (ex: Application__c.Contact__r.Name)</inlineHelpText>
    <label>Api field name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>