force-app/main/default/objects/Account_datatable_settings__mdt/fields/Cell_attributes__c.field-meta.xml
<CustomField>
    <fullName>Cell_attributes__c</fullName>
    <label>Cell attributes</label>
    <referenceTo>Cell_attributes__mdt</referenceTo>
    <relationshipLabel>Account datatable settings</relationshipLabel>
    <relationshipName>Account_datatable_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>