force-app/main/default/objects/Account_datatable_settings__mdt/fields/Column_field_name__c.field-meta.xml
<CustomField>
    <fullName>Column_field_name__c</fullName>
    <description>Used to create a wrapper to display and access data in the table, since we cannot have dots in those names (Application__c.Name is not valid)</description>
    <inlineHelpText>Used to create a wrapper to display and access data in the table, since we cannot have dots in those names (Application__c.Name is not valid)</inlineHelpText>
    <label>Column field name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>