force-app/main/default/objects/Account_datatable_settings__mdt/fields/Column_label__c.field-meta.xml
<CustomField>
    <fullName>Column_label__c</fullName>
    <description>Specify the column name as shown in the table. Has to be a valid custom label so we can handle translation properly.</description>
    <inlineHelpText>Specify the column name as shown in the table. Has to be a valid custom label so we can handle translation properly.</inlineHelpText>
    <label>Column label</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>