force-app/main/default/objects/Account_datatable_settings__mdt/fields/Combobox_picklist_attributes__c.field-meta.xml
<CustomField>
    <fullName>Combobox_picklist_attributes__c</fullName>
    <description>attributes for datatableCombobox</description>
    <label>Combobox picklist attributes</label>
    <referenceTo>Combobox_picklist_attributes__mdt</referenceTo>
    <relationshipLabel>Account datatable settings</relationshipLabel>
    <relationshipName>Account_datatable_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>