force-app/main/default/objects/Account_datatable_settings__mdt/fields/Date_attributes__c.field-meta.xml
<CustomField>
    <fullName>Date_attributes__c</fullName>
    <label>Date attributes</label>
    <referenceTo>Date_attributes__mdt</referenceTo>
    <relationshipLabel>Account datatable settings</relationshipLabel>
    <relationshipName>Account_datatable_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>