force-app/main/default/objects/Account_datatable_settings__mdt/fields/Filterable__c.field-meta.xml
<CustomField>
    <fullName>Filterable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether this is a field a user can filter view by</description>
    <inlineHelpText>Determines whether this is a field a user can filter view by</inlineHelpText>
    <label>Filterable</label>
    <type>Checkbox</type>
</CustomField>