force-app/main/default/objects/Account_datatable_settings__mdt/fields/Filterable_column_name__c.field-meta.xml
<CustomField>
    <fullName>Filterable_column_name__c</fullName>
    <description>Column name to filter by (corresponds to Column_field_name__c)</description>
    <inlineHelpText>Column name to filter by (corresponds to Column_field_name__c)</inlineHelpText>
    <label>Filterable column name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>