force-app/main/default/objects/Account_datatable_settings__mdt/fields/Filterable_field_api_name__c.field-meta.xml
<CustomField>
    <fullName>Filterable_field_api_name__c</fullName>
    <description>This specifies the API name of the field we are filtering by. This is only necessary when a column type is associated with more than one field (positions for example uses Name and Id)</description>
    <label>Filterable field api name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>