force-app/main/default/objects/Account_datatable_settings__mdt/fields/Is_id_column__c.field-meta.xml
<CustomField>
    <fullName>Is_id_column__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This signifies the column that contains the application Id. You have to query the application Id and you have to specify that column (and only that column) as the Id column.</description>
    <inlineHelpText>This signifies the column that contains the application Id. You have to query the application Id and you have to specify that column (and only that column) as the Id column.</inlineHelpText>
    <label>Is id column</label>
    <type>Checkbox</type>
</CustomField>