force-app/main/default/objects/Account_datatable_settings__mdt/fields/Multiselect_filter__c.field-meta.xml
<CustomField>
    <fullName>Multiselect_filter__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether a filter can have multiple values or just one</description>
    <inlineHelpText>Determines whether a filter can have multiple values or just one</inlineHelpText>
    <label>Multiselect filter</label>
    <type>Checkbox</type>
</CustomField>