force-app/main/default/objects/Account_datatable_settings__mdt/fields/Object_api_name__c.field-meta.xml
<CustomField>
    <fullName>Object_api_name__c</fullName>
    <description>Set object API name field belongs to.</description>
    <label>Object api name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>