force-app/main/default/objects/Account_datatable_settings__mdt/fields/Object_name__c.field-meta.xml
<CustomField>
    <fullName>Object_name__c</fullName>
    <label>Object name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>