force-app/main/default/objects/Account_datatable_settings__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Set the order of this column, so we can display them as the client wants.</description>
    <inlineHelpText>Set the order of this column, so we can display them as the client wants.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>