force-app/main/default/objects/Account_datatable_settings__mdt/fields/Record_view_navigation_attributes__c.field-meta.xml
<CustomField>
    <fullName>Record_view_navigation_attributes__c</fullName>
    <label>Record view navigation attributes</label>
    <referenceTo>Record_view_navigation_attributes__mdt</referenceTo>
    <relationshipLabel>Account datatable settings</relationshipLabel>
    <relationshipName>Account_datatable_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>