force-app/main/default/objects/Account_datatable_settings__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Contains the type of column, must be valid lightning-datatable column type, if attributes are needed, please provide those as well</description>
    <label>Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>