force-app/main/default/objects/Account_datatable_settings__mdt/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck this is a column should not be visible but instead is used, for example, combined with other data in one column.</description>
    <inlineHelpText>Uncheck this is a column should not be visible but instead is used, for example, combined with other data in one column.</inlineHelpText>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>