force-app/main/default/objects/Account_datatable_settings__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Column_label__c</columns>
    <columns>Editable__c</columns>
    <columns>Filterable__c</columns>
    <columns>Filterable_field_api_name__c</columns>
    <columns>Type__c</columns>
    <columns>Api_field_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>